{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 11,
  "lineage": "a04efa6b-d900-4a27-fa06-73c745a0cc89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b818a04bc9c2133c",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:instance/i-00745e8aa4f4aaa65",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00745e8aa4f4aaa65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0962d115348d32373"
              }
            ],
            "primary_network_interface_id": "eni-0962d115348d32373",
            "private_dns": "ip-10-0-0-189.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.189",
            "public_ip": "3.38.93.106",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-049ab97b220d447f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d2dd8424ccfb8f5",
            "tags": {
              "Name": "terraform-web"
            },
            "tags_all": {
              "Name": "terraform-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0558d6a588d7da269"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "i-00745e8aa4f4aaa65",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.tf_ec2_sg",
            "aws_subnet.tf_pub_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:internet-gateway/igw-0d195187af97f7d97",
            "id": "igw-0d195187af97f7d97",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0b251fd6337401837"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:route-table/rtb-0367b6084d056d6b6",
            "id": "rtb-0367b6084d056d6b6",
            "owner_id": "192676124148",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d195187af97f7d97",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_pub_rt"
            },
            "tags_all": {
              "Name": "terraform_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b251fd6337401837"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "rtb-0367b6084d056d6b6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca2efe1b7f2da2a1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0367b6084d056d6b6",
            "subnet_id": "subnet-09d2dd8424ccfb8f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_pub_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group/sg-0558d6a588d7da269",
            "description": "terraform pub security group",
            "egress": [],
            "id": "sg-0558d6a588d7da269",
            "ingress": [],
            "name": "terraform pub security group",
            "name_prefix": "",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_pub_sg"
            },
            "tags_all": {
              "Name": "terraform_pub_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b251fd6337401837"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sg-0558d6a588d7da269",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf_pub_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1914224486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0558d6a588d7da269",
            "security_group_rule_id": "sgr-0902de081b7b310e4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.tf_ec2_sg",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf_pub_sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1475207447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0558d6a588d7da269",
            "security_group_rule_id": "sgr-026c8b55f84d332d7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.tf_ec2_sg",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tf_pub_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-513295198",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0558d6a588d7da269",
            "security_group_rule_id": "sgr-0c0382b35adeb936c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.tf_ec2_sg",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-09d2dd8424ccfb8f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d2dd8424ccfb8f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform_pub_sn"
            },
            "tags_all": {
              "Name": "terraform_pub_sn"
            },
            "vpc_id": "vpc-0b251fd6337401837"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-09d2dd8424ccfb8f5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:vpc/vpc-0b251fd6337401837",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4ed344b139bc135",
            "default_route_table_id": "rtb-08b4909c4bb538e14",
            "default_security_group_id": "sg-05baab8bbd1a2a3ee",
            "dhcp_options_id": "dopt-0a9813bc501c7365e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b251fd6337401837",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b4909c4bb538e14",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "vpc-0b251fd6337401837",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}